--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1524,12 +1524,12 @@
         "results"
       ],
       "metadata": {
-        "id": "pempcktLVjz1",
-        "outputId": "32cd388f-cccb-4ac0-a980-eef3cf911333",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
-        }
+        },
+        "id": "pempcktLVjz1",
+        "outputId": "32cd388f-cccb-4ac0-a980-eef3cf911333"
       },
       "id": "pempcktLVjz1",
       "execution_count": 320,
@@ -1826,11 +1826,11 @@
         "reg.intercept_"
       ],
       "metadata": {
-        "id": "aPjGGFBIW6S6",
-        "outputId": "3cfbdb5c-0d44-4b84-bec1-67052a3861bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aPjGGFBIW6S6",
+        "outputId": "3cfbdb5c-0d44-4b84-bec1-67052a3861bb"
       },
       "id": "aPjGGFBIW6S6",
       "execution_count": 321,
@@ -1854,12 +1854,12 @@
         "results"
       ],
       "metadata": {
-        "id": "-YqmHAyeXSMg",
-        "outputId": "90a7b2dc-7930-44be-b89a-b2437976a57c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "-YqmHAyeXSMg",
+        "outputId": "90a7b2dc-7930-44be-b89a-b2437976a57c"
       },
       "id": "-YqmHAyeXSMg",
       "execution_count": 322,
@@ -2186,12 +2186,12 @@
         "results"
       ],
       "metadata": {
-        "id": "L6m2S61L3n4Y",
-        "outputId": "a4a818d2-ee4a-41f3-be84-1342ae3776ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 274
-        }
+        },
+        "id": "L6m2S61L3n4Y",
+        "outputId": "a4a818d2-ee4a-41f3-be84-1342ae3776ed"
       },
       "id": "L6m2S61L3n4Y",
       "execution_count": 323,
@@ -2501,11 +2501,11 @@
         "100*1.032257 + 89.4"
       ],
       "metadata": {
-        "id": "sGCBTK5d_3qY",
-        "outputId": "4e21de33-ee3a-4a0c-f849-a8920507c79c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sGCBTK5d_3qY",
+        "outputId": "4e21de33-ee3a-4a0c-f849-a8920507c79c"
       },
       "id": "sGCBTK5d_3qY",
       "execution_count": 324,
@@ -2565,12 +2565,12 @@
         "results"
       ],
       "metadata": {
-        "id": "k4Hm_kL1AFdl",
-        "outputId": "7bf7caad-863f-42ec-c9e3-b663d58a012b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 368
-        }
+        },
+        "id": "k4Hm_kL1AFdl",
+        "outputId": "7bf7caad-863f-42ec-c9e3-b663d58a012b"
       },
       "id": "k4Hm_kL1AFdl",
       "execution_count": 325,
@@ -2898,11 +2898,11 @@
         "110.617+53.69+100*.0626"
       ],
       "metadata": {
-        "id": "HztaqBM0AUzY",
-        "outputId": "a307515f-b7e6-47ef-e0f3-7ddc8defcd0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HztaqBM0AUzY",
+        "outputId": "a307515f-b7e6-47ef-e0f3-7ddc8defcd0e"
       },
       "id": "HztaqBM0AUzY",
       "execution_count": 326,
@@ -3033,12 +3033,12 @@
         "df2.head()"
       ],
       "metadata": {
-        "id": "vy3-35UYJJOv",
-        "outputId": "c6730c30-841c-4478-f8ee-ca7aaf0124f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "vy3-35UYJJOv",
+        "outputId": "c6730c30-841c-4478-f8ee-ca7aaf0124f9"
       },
       "id": "vy3-35UYJJOv",
       "execution_count": 327,
@@ -3447,11 +3447,11 @@
         "bail_status_distribution"
       ],
       "metadata": {
-        "id": "_1JhzSEJJQNz",
-        "outputId": "fd656a74-20d7-408f-c50f-bb0ba6381ab0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_1JhzSEJJQNz",
+        "outputId": "fd656a74-20d7-408f-c50f-bb0ba6381ab0"
       },
       "id": "_1JhzSEJJQNz",
       "execution_count": 328,
@@ -3489,12 +3489,12 @@
         "df3.head()"
       ],
       "metadata": {
-        "id": "nAicrb0iKNgt",
-        "outputId": "f13f4ead-ab00-4c11-d0a1-15b6e7e44e02",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "nAicrb0iKNgt",
+        "outputId": "f13f4ead-ab00-4c11-d0a1-15b6e7e44e02"
       },
       "id": "nAicrb0iKNgt",
       "execution_count": 329,
@@ -3838,12 +3838,12 @@
         "result\n"
       ],
       "metadata": {
-        "id": "z0WNq8_oNrZK",
-        "outputId": "667de12d-e38e-4228-b427-6017ff320a68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 99
-        }
+        },
+        "id": "z0WNq8_oNrZK",
+        "outputId": "667de12d-e38e-4228-b427-6017ff320a68"
       },
       "id": "z0WNq8_oNrZK",
       "execution_count": 330,
@@ -4020,12 +4020,12 @@
         "result"
       ],
       "metadata": {
-        "id": "K7jEv0sxKxZG",
-        "outputId": "954bb732-1708-4c6a-b16e-ed45fad0a1e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 112
-        }
+        },
+        "id": "K7jEv0sxKxZG",
+        "outputId": "954bb732-1708-4c6a-b16e-ed45fad0a1e3"
       },
       "id": "K7jEv0sxKxZG",
       "execution_count": 331,
@@ -4307,12 +4307,12 @@
         "result"
       ],
       "metadata": {
-        "id": "_WVA50tpQx6d",
-        "outputId": "a1955e0b-a377-41f6-becd-3b32e2e69b99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "_WVA50tpQx6d",
+        "outputId": "a1955e0b-a377-41f6-becd-3b32e2e69b99"
       },
       "id": "_WVA50tpQx6d",
       "execution_count": 332,
@@ -4600,12 +4600,12 @@
         "result"
       ],
       "metadata": {
-        "id": "URDuDQtmSwRL",
-        "outputId": "4b6dd028-1d99-43a6-cc36-98f10ed05937",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "URDuDQtmSwRL",
+        "outputId": "4b6dd028-1d99-43a6-cc36-98f10ed05937"
       },
       "id": "URDuDQtmSwRL",
       "execution_count": 333,
@@ -4899,12 +4899,12 @@
         "result"
       ],
       "metadata": {
-        "id": "YlIk8hT2S3kg",
-        "outputId": "3b53e062-29c5-4a0d-c8f0-1286efe4cf47",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "id": "YlIk8hT2S3kg",
+        "outputId": "3b53e062-29c5-4a0d-c8f0-1286efe4cf47"
       },
       "id": "YlIk8hT2S3kg",
       "execution_count": 334,
@@ -5233,12 +5233,12 @@
         "df3.head()"
       ],
       "metadata": {
-        "id": "Tr7QXJJ7THdB",
-        "outputId": "7238f7eb-106f-49fa-ec96-870b2ee19046",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "Tr7QXJJ7THdB",
+        "outputId": "7238f7eb-106f-49fa-ec96-870b2ee19046"
       },
       "id": "Tr7QXJJ7THdB",
       "execution_count": 335,
@@ -5568,12 +5568,12 @@
         "result"
       ],
       "metadata": {
-        "id": "pCFelraFTeSM",
-        "outputId": "eda29053-a2f7-46dd-fbcd-d09f9beb804f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "pCFelraFTeSM",
+        "outputId": "eda29053-a2f7-46dd-fbcd-d09f9beb804f"
       },
       "id": "pCFelraFTeSM",
       "execution_count": 336,
@@ -5881,7 +5881,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "Significant ethical and practical issues are raised when data-driven models are used to help with bail decisions. These include the possibility of sustaining systemic biases found in historical data, oversimplifying intricate judicial considerations, and compromising accountability and transparency in the legal system. These models might not be able to adequately represent the subtleties of individual instances, which could result in improper rulings that disregard the particular circumstances surrounding the defendant. Moreover, relying too much on automated technologies runs the risk of undervaluing human judgment, which is crucial for empathy and adaptability in legal choices. Concerns also include data privacy and the moral ramifications of giving algorithms the power to make judgments that could affect someone's life.  While these tools can offer valuable insights, their deployment in sensitive judicial contexts demands cautious consideration, emphasizing fairness, transparency, and the preservation of human oversight to ensure justice and protect individual rights."
+        "Significant ethical and practical issues are raised when data-driven models are used to help with bail decisions. These include the possibility of sustaining systemic biases found in historical data, oversimplifying intricate judicial considerations, and compromising accountability and transparency in the legal system. These models might not be able to adequately represent the subtleties of individual instances, which could result in improper rulings that disregard the particular circumstances surrounding the defendant. Moreover, relying too much on automated technologies runs the risk of undervaluing human judgment, which is crucial for empathy and adaptability in legal choices. Concerns also include data privacy and the moral ramifications of giving algorithms the power to make judgments that could affect someone's life.  While these tools can offer valuable insights, we have to use them carefully. Using it as an end-all be-all is clearly not right."
       ],
       "metadata": {
         "id": "InKeCWztYnm8"
